--- a/tmux.conf
+++ b/tmux.conf
@@ -112,13 +112,18 @@ bind F2 select-layout main-vertical
 
 ### key bindings for copy mode
 
+bind-key v copy-mode
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+bind-key p paste-buffer
+
 # enter copy mode kinda like we enter visual mode in vi
-bind v copy-mode
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-bind -t vi-copy Escape cancel
-bind p paste-buffer
+# bind v copy-mode
+# bind -T vi-copy v rectangle-toggle
+# bind -T vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind -T vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# bind -T vi-copy Escape cancel
+# bind p paste-buffer
 
 set -g @copycat_next 'C-n'
 set -g @copycat_prev 'C-p'
