Adds vim-tmux-navigator

--- a/tmux.conf
+++ b/tmux.conf
@@ -66,16 +66,11 @@ bind -r C-n select-window -t :+
 bind -r C-p select-window -t :-
 
 # convenient moving around using hjkl keys
-bind -r C-k select-pane -U
-bind -r C-j select-pane -D
-bind -r C-h select-pane -L
-bind -r C-l select-pane -R
-
-# convenient moving around using hjkl keys
-bind -r C-k select-pane -U
-bind -r C-j select-pane -D
-bind -r C-h select-pane -L
-bind -r C-l select-pane -R
+# Replaced by vim-tmux-navigator
+# bind -r C-k select-pane -U
+# bind -r C-j select-pane -D
+# bind -r C-h select-pane -L
+# bind -r C-l select-pane -R
 
 # resizing panes
 bind -r "left"  resize-pane -L 10
@@ -144,6 +139,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g @resurrect-save 'S'
 set -g @resurrect-restore 'R'
@@ -152,4 +148,4 @@ set -g @resurrect-processes 'tig "~working_set"'
 
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
-run-shell '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
