--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,8 @@
 # fixes copy & paste issue w/ tmux
 # set-option -g default-command "reattach-to-user-namespace -l bash"
 
+set-option -g default-shell /opt/homebrew/bin/bash
+
 set -g history-limit 9999
 
 # pretty colors
@@ -59,13 +61,6 @@ bind C-v split-window -c "#{pane_current_path}" -h
 bind -r C-n select-window -t :+
 bind -r C-p select-window -t :-
 
-# convenient moving around using hjkl keys
-# Replaced by vim-tmux-navigator
-# bind -r C-k select-pane -U
-# bind -r C-j select-pane -D
-# bind -r C-h select-pane -L
-# bind -r C-l select-pane -R
-
 # resizing panes
 bind -r "left"  resize-pane -L 10
 bind -r "down"  resize-pane -D 5
@@ -79,11 +74,12 @@ bind -r S-"right" resize-pane -R 1
 
 bind -r x swap-pane -D
 
-# double tap the prefix to go to last-pane is convenient.
-# bind -r C-"space" last-pane
-
 # create new window (like tabs)
 bind -r C-t new-window -c "#{pane_current_path}"
+
+# Move windows left and right
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
 
 # using one of the main-* layouts, this is handy for cycling which pane has the
 # main spot in the layout.
